tests/files/lexer_tests/should_fail/061.cmdr
// Illegal character in variable name (ascii 28)
myvar = 28;